--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
       background-color: lightblue;
       border-radius: 50%;
       border: 2px solid black;
-      position: centre;
+      position: center;
   }
 
   .clock .number{
