--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,95 @@
  
+/* On screens that are 1360px or less, set the background color to blue */
+@media screen and (max-width: 1360px) {
+  
+  body{
+    background: linear-gradient(#e66465, #9198e5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 35vh;
+    overflow:hidden;
+
+  }
+
+  .clock{
+      width:3;
+      height: 90;
+      background-color: lightblue;
+      border-radius: 50%;
+      border: 2px solid black;
+      position: absolute;
+  }
+
+  .clock .number{
+      --rotation:0;
+      position: absolute;
+      width:100%;
+      height: 100%;
+      text-align: center;
+      transform: rotate(var(--rotation));
+      font-size: 1.5rem; 
+  }
+
+  .clock .number1{--rotation: 30deg;}
+  .clock .number2 {--rotation: 60deg;}
+  .clock .number3 {--rotation: 90deg;}
+  .clock .number4 {--rotation: 120deg;}
+  .clock .number5 {--rotation: 150deg;}
+  .clock .number6 {--rotation: 180deg;}
+  .clock .number7 {--rotation: 210deg;}
+  .clock .number8 {--rotation: 240deg;}
+  .clock .number9 {--rotation: 270deg;}
+  .clock .number10 {--rotation: 300deg;}
+  .clock .number11 {--rotation: 330deg;}
+
+  .clock .hand{
+  --rotation: 0;
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  width: 10px;
+  height: 50%;
+  background-color: black;
+  transform-origin: bottom;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+}
+
+.clock::after{
+  content: '';
+  position: absolute;
+  background-color: black;
+  width:25;
+  height: 25;
+  border-radius: 50%;
+  z-index:11;
+  top: 47%;
+  right: 48%;
+}
+.clock .hand.second{
+  width: 3px;
+  height: 42%;
+  background-color: red;
+}
+
+.clock .hand.minute{
+  width: 8px;
+  height: 42%;
+  background-color: black ;
+}
+
+.clock .hand.hour{
+  width: 10px;
+  height: 25%;
+  background-color: black ;
+}
+ 
+ 
+ 
+ 
+}
 
   body{
     background: linear-gradient(#e66465, #9198e5);
